syntax = "proto3";
package telemetry;

option go_package = "git.d464.sh/uni/telemetry/pb";

service Telemetry {
  rpc GetSession(GetSessionRequest) returns (GetSessionResponse);

  // The data in the segment is a ResourceMetrics defined in:
  // https://github.com/open-telemetry/opentelemetry-proto/blob/main/opentelemetry/proto/metrics/v1/metrics.proto
  rpc GetMetrics(GetMetricsRequest) returns (stream StreamSegment);

  rpc GetProperties(GetPropertiesRequest) returns (stream Property);

  rpc GetCaptureDescriptors(GetCaptureDescriptorsRequest)
      returns (stream CaptureDescriptor);

  // The data in the segment is JSON.
  rpc GetCapture(GetCaptureRequest) returns (stream StreamSegment);

  rpc GetEventDescriptors(GetEventDescriptorsRequest)
      returns (stream EventDescriptor);

  // The data in the segment is JSON.
  rpc GetEvent(GetEventRequest) returns (stream StreamSegment);
}

message GetSessionRequest {}
message GetSessionResponse {
  // The random UUID of this session
  string uuid = 1;
}

message StreamSegment {
  uint32 sequence_number = 1;
  bytes data = 2;
}

message GetMetricsRequest {
  // The sequence number of the first segment that should be returned.
  uint32 sequence_number_since = 1;
}

message GetPropertiesRequest {}
message Property {
  string name = 1;
  string description = 2;
  oneof value {
    int64 integer_value = 3;
    string string_value = 4;
  }
}

message GetCaptureDescriptorsRequest {}
message CaptureDescriptor {
  string name = 1;
  string description = 2;
}

message GetCaptureRequest {
  // The sequence number of the first segment that should be returned.
  uint32 sequence_number_since = 1;
  string name = 2;
}

message GetEventDescriptorsRequest {}
message EventDescriptor {
  string name = 1;
  string description = 2;
}

message GetEventRequest {
  uint32 sequence_number_since = 1;
  string name = 2;
}
